fixed several layout bugs

--- a/Tests/QuadView/css/reset.css
+++ b/Tests/QuadView/css/reset.css
@@ -30,7 +30,7 @@ body {
   line-height: normal;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size:20px;
-  padding: 1rem;
+  padding: 0.0rem;
   background-color: var(--light);
   color: var(--dark);
 }
